[gd_scene load_steps=3 format=3 uid="npc_management_scene_1"]

[ext_resource path="res://scripts/ui/npc_management_menu.gd" type="Script" id=1]

[node name="NPCManagementMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8

[node name="Title" type="Label" parent="VBox"]
text = "Управление NPC"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBox"]

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="NPCListPanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)

[node name="VBoxNPCList" type="VBoxContainer" parent="VBox/HBox/NPCListPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NPCListLabel" type="Label" parent="VBox/HBox/NPCListPanel/VBoxNPCList"]
text = "NPC на острове:"
theme_override_font_sizes/font_size = 18

[node name="NPCList" type="ScrollContainer" parent="VBox/HBox/NPCListPanel/VBoxNPCList"]
layout_mode = 2

[node name="NPCItems" type="VBoxContainer" parent="VBox/HBox/NPCListPanel/VBoxNPCList/NPCList"]
layout_mode = 2

[node name="DetailsPanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)

[node name="VBoxDetails" type="VBoxContainer" parent="VBox/HBox/DetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NPCNameLabel" type="Label" parent="VBox/HBox/DetailsPanel/VBoxDetails"]
text = "Имя: -"
theme_override_font_sizes/font_size = 20

[node name="NPCTypeLabel" type="Label" parent="VBox/HBox/DetailsPanel/VBoxDetails"]
text = "Тип: -"
theme_override_font_sizes/font_size = 16

[node name="NPCLevelLabel" type="Label" parent="VBox/HBox/DetailsPanel/VBoxDetails"]
text = "Уровень: -"
theme_override_font_sizes/font_size = 16

[node name="MoodLabel" type="Label" parent="VBox/HBox/DetailsPanel/VBoxDetails"]
text = "Настроение: -"
theme_override_font_sizes/font_size = 16

[node name="LoyaltyLabel" type="Label" parent="VBox/HBox/DetailsPanel/VBoxDetails"]
text = "Лояльность: -"
theme_override_font_sizes/font_size = 16

[node name="TaskLabel" type="Label" parent="VBox/HBox/DetailsPanel/VBoxDetails"]
text = "Задание: Нет"
theme_override_font_sizes/font_size = 16

[node name="TasksPanel" type="Panel" parent="VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(300, 0)

[node name="VBoxTasks" type="VBoxContainer" parent="VBox/HBox/TasksPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TasksLabel" type="Label" parent="VBox/HBox/TasksPanel/VBoxTasks"]
text = "Доступные задания:"
theme_override_font_sizes/font_size = 18

[node name="TasksList" type="ScrollContainer" parent="VBox/HBox/TasksPanel/VBoxTasks"]
layout_mode = 2

[node name="TaskItems" type="VBoxContainer" parent="VBox/HBox/TasksPanel/VBoxTasks/TasksList"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="VBox"]
text = "Закрыть"

